# dash-cam-computation-server

./: CMakeLists.txt  README.html  README.md
api/: indicators.h
include/: dash_cam.h
lib/: CMakeLists.txt
lib/src/: indicators.c
src/: log.c  log.h  main.c  server_core.c  server_core.h  server_utils.c  server_utils.h  threadpool.c  threadpool.h  timer.c  timer.h
tests/: CMakeLists.txt
tests/dash_cam/: main.c
tests/functional_test/: CMakeLists.txt  test.sh
tests/functional_test/lib/: indicators.c
