cmake_minimum_required(VERSION 3.9)
project(indicator C)

AUX_SOURCE_DIRECTORY(src/ SRC_LIST)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRC_LIST})

#set_target_properties(${PROJECT_NAME} PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/api)
