cmake_minimum_required(VERSION 3.9)

ADD_SUBDIRECTORY(functional_test)

PROJECT(dash_cam C)

AUX_SOURCE_DIRECTORY(dash_cam/ SRC_LIST)

ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_LIST})

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
TARGET_LINK_LIBRARIES(${PROJECT_NAME})
